Footer Gap Fix

--- a/css/shared/footer.css
+++ b/css/shared/footer.css
@@ -168,9 +168,17 @@
 }
 
 @media screen and (max-width: 990px) {
+  #footer {
+    padding: 0px;
+  }
+
+  .container-fluid {
+    padding: 0px;
+  }
+
   .footer-links__grid {
     grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
+    gap: 1.5rem 0rem;
   }
 
   .footer-links__grid div:first-of-type {
